# ashmanix-moveface-obs-plugin

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  macos-build-and-run-locally.sh
.github/actions/run-clang-format/: action.yaml
build-aux/: .run-format.zsh
data/locale/: en-GB.ini  en-US.ini
data/styles/: main-styles.qss
src/: main-widget-dock.cpp  main-widget-dock.hpp  plugin-main.c  plugin-main.cpp
src/classes/blendshapes/: blendshape-key.cpp  blendshape-key.h  blendshape-rule.cpp  blendshape-rule.h  blendshape.cpp  blendshape.h
src/classes/poses/: movable-pixmap-item.h  pixmap-item.h  pose-image-data.cpp  pose-image-data.h  pose-image.h  pose.cpp  pose.h  vector3.cpp
src/classes/tracking/: kalman-filter.h  tracker-data.cpp  tracker-data.h  vtube-studio-data.cpp  vtube-studio-data.h
src/obs/: move-face-image-source.cpp  moveface-image-source.cpp  moveface-image-source.h  moveface-source-private.cpp  moveface-source-private.h  my-gs-texture-wrapper.h
src/ui/: FaceTracker.ui  FaceTrackerDialog.ui  MainWidget.ui
src/ui/settings-dialog/: BlendshapeRulesWidget.ui  FaceSettingsWidget.ui  FaceTrackerDialog.ui  ImageFilesWidget.ui  PoseImageView.ui  PoseListView.ui  SingleBlendshapeRuleWidget.ui
src/utils/: blendshape-key.cpp  blendshape-key.hpp  blendshape-rule.cpp  blendshape-rule.hpp  blendshape.cpp  blendshape.hpp  network-connection.cpp  network-connection.hpp  network-tracking.cpp  network-tracking.hpp  obs-utils.cpp  obs-utils.hpp  pose-image-data.cpp  pose-image-data.hpp  pose-image.hpp  pose-list-model.cpp  pose-list-model.hpp  pose.cpp  pose.hpp  tracker-data.cpp  tracker-data.hpp  tracker-utils.cpp  tracker-utils.hpp  utils.cpp  utils.h  vector3.cpp  vector3.hpp  vtube-studio-data.cpp  vtube-studio-data.hpp
src/widgets/: avatar-graphics-view.cpp  avatar-graphics-view.hpp  face-tracker.cpp  face-tracker.h  face-tracker.hpp  main-widget-dock.cpp  main-widget-dock.h  obs-dock-wrapper.h  pixmap-item.hpp  settings-dialog.cpp  settings-dialog.hpp
src/widgets/comms/: network-tracking.cpp  network-tracking.h  tracker-worker.cpp  tracker-worker.h
src/widgets/components/: blendshape-slider.cpp  blendshape-slider.h
src/widgets/settings-dialog/: avatar-graphics-view.cpp  avatar-graphics-view.h  blendshape-rules-widget.cpp  blendshape-rules-widget.h  face-settings-widget.cpp  face-settings-widget.h  image-files-widget.cpp  image-files-widget.h  pose-display-widget.cpp  pose-display-widget.h  pose-list-widget.cpp  pose-list-widget.h  settings-dialog.cpp  settings-dialog.h  settings-widget-interface.h  single-blendshape-rule-widget.cpp  single-blendshape-rule-widget.h
tests/: CMakeLists.txt  run_tests.cmake
tests/mocks/: test-mocks.cpp
tests/unit/: blendshape-key.cc
tests/unit/classes/blendshapes/: blendshape-key_test.cpp
